Translation updated by Ivar Smolin.
2006-10-19  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-10-14 23:24+0300\n"
+"PO-Revision-Date: 2006-10-19 20:23+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -3043,7 +3043,7 @@ msgstr "Kõikide navigatsiooniaknas valitud kirjete avamine"
 #: ../src/file-manager/fm-directory-view.c:6806
 #: ../src/file-manager/fm-directory-view.c:6810
 msgid "Open with Other _Application..."
-msgstr "_Ava teise rakendusega..."
+msgstr "_Ava mõne muu rakendusega..."
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6807
@@ -3117,7 +3117,7 @@ msgstr ""
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6848
 msgid "D_uplicate"
-msgstr "_Tee duplikaat"
+msgstr "Loo _duplikaat"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6849
@@ -3129,8 +3129,8 @@ msgstr "Kõigi valitud kirjete dubleerimine"
 #: ../src/file-manager/fm-directory-view.c:7746
 msgid "Ma_ke Link"
 msgid_plural "Ma_ke Links"
-msgstr[0] "Tee _viit"
-msgstr[1] "Tee _viidad"
+msgstr[0] "Loo _viit"
+msgstr[1] "Loo _viidad"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6853
@@ -3140,7 +3140,7 @@ msgstr "Igale valitud kirjele nimeviida loomine"
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6856
 msgid "_Rename..."
-msgstr "_Nimeta ümber..."
+msgstr "Muuda _nime..."
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6857
@@ -3366,7 +3366,7 @@ msgstr "Tõsta avatud kaust prügikasti"
 #: ../src/file-manager/fm-directory-view.c:7666
 #, c-format
 msgid "_Open with \"%s\""
-msgstr "_Ava programmiga \"%s\""
+msgstr "_Ava rakendusega \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:7684
 #, c-format
