--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-19  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-10-16  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
