--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-10-19 20:23+0300\n"
+"PO-Revision-Date: 2006-10-23 12:46+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -3477,7 +3477,7 @@ msgstr "Sul ei ole \"%s\" sisu vaatamiseks vajalikke õigusi."
 #: ../src/file-manager/fm-error-reporting.c:63
 #, c-format
 msgid "\"%s\" couldn't be found. Perhaps it has recently been deleted."
-msgstr "Ei leia \"%s\". Ilmselt on see hiljuti kustutatud."
+msgstr "\"%s\" pole võimalik leida. Ilmselt on see hiljuti kustutatud."
 
 #: ../src/file-manager/fm-error-reporting.c:70
 #, c-format
@@ -3685,12 +3685,12 @@ msgstr "Kompaktset paigutuse sisse- ja väljalülitamine"
 #. name, stock id
 #: ../src/file-manager/fm-icon-view.c:1442
 msgid "Re_versed Order"
-msgstr "Vastupidine _järjestus"
+msgstr "Pööratud _järjestus"
 
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1443
 msgid "Display icons in the opposite order"
-msgstr "Ikoonid kuvamine vastupidises järjestuses"
+msgstr "Ikoonid kuvamine pööratud järjestuses"
 
 #. name, stock id
 #: ../src/file-manager/fm-icon-view.c:1447
@@ -4360,6 +4360,9 @@ msgid ""
 "\n"
 "Add connect to server mount"
 msgstr ""
+"\n"
+"\n"
+"Ühenduse lisamine serveri jagatud kataloogile"
 
 #: ../src/nautilus-connect-server-dialog.c:113
 msgid "Custom Location"
