--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-23  Priit Laes  <plaes@cvs.gnome.org>
 
+	* et.po: Translation updated.
+
+2006-10-23  Priit Laes  <plaes@cvs.gnome.org>
+
 	* et.po: Translation updated by Ivar Smolin.
 
 2006-10-20  Clytie Siddall <clytie@riverland.net.au>
