--- a/po/et.po
+++ b/po/et.po
@@ -19,8 +19,8 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-10-23 12:46+0300\n"
-"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
+"PO-Revision-Date: 2006-10-23 18:46+0300\n"
+"Last-Translator: Priit Laes <amd@store20.com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2272,7 +2272,7 @@ msgstr "Tavaline läbipaistvus"
 
 #: ../libnautilus-private/nautilus-icon-container.c:4833
 msgid "Opacity of the normal icons if frame_text is set"
-msgstr "Tavaliste ikoonide katvus kui frame_text on määratud"
+msgstr "Tavaliste ikoonide katvus, kui frame_text on määratud"
 
 #: ../libnautilus-private/nautilus-icon-dnd.c:813
 msgid "Switch to Manual Layout?"
@@ -3690,7 +3690,7 @@ msgstr "Pööratud _järjestus"
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1443
 msgid "Display icons in the opposite order"
-msgstr "Ikoonid kuvamine pööratud järjestuses"
+msgstr "Ikoonide kuvamine pööratud järjestuses"
 
 #. name, stock id
 #: ../src/file-manager/fm-icon-view.c:1447
