--- a/po/et.po
+++ b/po/et.po
@@ -19,8 +19,8 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-10-23 18:46+0300\n"
-"Last-Translator: Priit Laes <amd@store20.com>\n"
+"PO-Revision-Date: 2006-10-30 12:23+0200\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -752,6 +752,11 @@ msgid ""
 "on a remote server. If set to \"local_only\" then only plays previews on "
 "local file systems. If set to \"never\" then it never previews sound."
 msgstr ""
+"Kiiruse kompromiss, mis rakendatakse hiirekursori liikumisel helifailide "
+"ikoonide kohale. Kui väärtuseks on \"always\", siis esitatakse heli alati "
+"(ka siis, kui fail asub kaugserveris). Kui väärtuseks on \"local_only\", "
+"siis esitatakse heli ainult kohalike failide korral. Kui väärtuseks on "
+"\"never\", siis heli ei esitata."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:83
 msgid ""
@@ -761,6 +766,11 @@ msgid ""
 "previews for local file systems. If set to \"never\" then never bother to "
 "read preview data."
 msgstr ""
+"Kiiruse kompromiss, mis rakendatakse hiirekursori liikumisel tekstifailide "
+"ikoonide kohale. Kui väärtuseks on \"always\", siis näidatakse teksti "
+"eelvaadet alati (ka siis, kui fail asub kaugserveris). Kui väärtuseks on "
+"\"local_only\", siis näidatakse eelvaadet ainult kohalike failide korral. "
+"Kui väärtuseks on \"never\", siis eelvaadet ei näidata."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:84
 msgid ""
@@ -770,6 +780,11 @@ msgid ""
 "If set to \"never\" then never bother to thumbnail images, just use a "
 "generic icon."
 msgstr ""
+"Kiiruse kompromiss, mis rakendatakse hiirekursori liikumisel pildifailide "
+"ikoonide kohale. Kui väärtuseks on \"always\", siis näidatakse pildist "
+"tehtud pisipilti alati (ka siis, kui fail asub kaugserveris). Kui väärtuseks "
+"on \"local_only\", siis näidatakse pisipilti ainult kohalike failide korral. "
+"Kui väärtuseks on \"never\", siis pisipilti ei näidata."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:85
 msgid ""
@@ -778,6 +793,11 @@ msgid ""
 "server. If set to \"local_only\" then only show counts for local file "
 "systems. If set to \"never\" then never bother to compute item counts."
 msgstr ""
+"Kiiruse kompromiss, mis rakendatakse kataloogis olevate kirjete arvu "
+"näitamisel. Kui väärtuseks on \"always\", siis näidatakse kirjete arvu alati "
+"(ka siis, kui kataloog asub kaugserveris). Kui väärtuseks on \"local_only\", "
+"siis näidatakse kirjete arvu ainult kohalike failisüsteemide korral. "
+"Kui väärtuseks on \"never\", siis kirjete arvu ei näidata."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:86
 msgid ""
