Sleep shorter, for more torture
2006-11-02  Alexander Larsson  <alexl@redhat.com>

	* test/file-torture.py (main):
	Sleep shorter, for more torture

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-11-02  Alexander Larsson  <alexl@redhat.com>
 
+	* test/file-torture.py (main):
+	Sleep shorter, for more torture
+
+2006-11-02  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-directory-private.h: 
 	* libnautilus-private/nautilus-directory-async.c:
 	Call all call_when_ready callbacks from an idle handler.
