Translation updated by Ivar Smolin.
2006-11-03  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-10-30 12:23+0200\n"
+"PO-Revision-Date: 2006-11-01 23:56+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -2692,16 +2692,16 @@ msgstr[1] "Valitud %d kataloogi"
 #, c-format
 msgid " (containing %d item)"
 msgid_plural " (containing %d items)"
-msgstr[0] " (sisaldab \"%d\" kirje)"
-msgstr[1] " (sisaldab \"%d\" kirjet)"
+msgstr[0] " (selles on %d kirje)"
+msgstr[1] " (selles on %d kirjet)"
 
 #. translators: this is preceded with a string of form 'N folders' (N more than 1)
 #: ../src/file-manager/fm-directory-view.c:2188
 #, c-format
 msgid " (containing a total of %d item)"
 msgid_plural " (containing a total of %d items)"
-msgstr[0] " (sisaldab kokku %d kirje)"
-msgstr[1] " (sisaldab kokku %d kirjet)"
+msgstr[0] " (nendes on kokku %d kirje)"
+msgstr[1] " (nendes on kokku %d kirjet)"
 
 #: ../src/file-manager/fm-directory-view.c:2204
 #, c-format
@@ -2720,8 +2720,8 @@ msgstr[1] "Valitud %d kirjet (%s)"
 #, c-format
 msgid "%d other item selected (%s)"
 msgid_plural "%d other items selected (%s)"
-msgstr[0] "Valitud %d muud kirjet (%s)"
-msgstr[1] "Valitud %d muud kirjet (%s)"
+msgstr[0] "lisaks on valitud veel %d kirje (%s)"
+msgstr[1] "lisaks on valitud veel %d kirjet (%s)"
 
 #: ../src/file-manager/fm-directory-view.c:2237
 #, c-format
