--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-03  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation, fix #369439.
+
 2006-11-03  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
