Translation updated by Ivar Smolin.
2006-11-05  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-11-01 23:56+0200\n"
+"PO-Revision-Date: 2006-11-05 10:14+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -2674,7 +2674,7 @@ msgstr "_Kataloog:"
 
 #: ../src/file-manager/fm-directory-view.c:1340
 msgid "Select Folder to Save Search In"
-msgstr ""
+msgstr "Otsing salvestamiseks kataloogi valimine"
 
 #: ../src/file-manager/fm-directory-view.c:2165
 #, c-format
@@ -5351,7 +5351,7 @@ msgstr "Värvi _väärtus:"
 #: ../src/nautilus-property-browser.c:1167
 #, c-format
 msgid "Sorry, but \"%s\" is not a valid file name."
-msgstr "Vabandust, kuid \"%s\" ei ole sobilik faili nimi."
+msgstr "Vabandust, \"%s\" ei ole sobilik failinimi."
 
 #: ../src/nautilus-property-browser.c:1170
 msgid "Sorry, but you did not supply a valid file name."
