--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-11-06  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-file-management-properties.glade:
+	Specify label-for and labelled-by atk relations. (#356124)
+
+	Patch from Padraig O'Briain  <padraig.obriain@sun.com>
+
 2006-11-03  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-metafile.c:
