--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-06  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c (nautilus_file_new_from_relative_uri):
+	Don't crash on old desktop dir and search dir uris. (#349840)
+
 2006-11-06  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-file-management-properties.glade:
