--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-11-06  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-container.c: 
+	Cancel rubberbanding if we get a grab shadow event.
+	This happens when a modal dialog (e.g. an error or auth dialog)
+	appears. (Partially fixes #122688)
+	
+2006-11-06  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-icon-view.c (play_file):
 	Don't close handle and free buffer twice on error. (#321175)
 
