--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2006-11-06  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	* nautilus-computer.desktop.in:
+	* nautilus-computer.desktop.in.in:
+	* nautilus-file-management-properties.desktop.in:
+	* nautilus-file-management-properties.desktop.in.in:
+	* nautilus-folder-handler.desktop.in:
+	* nautilus-folder-handler.desktop.in.in:
+	* nautilus-home.desktop.in:
+	* nautilus-home.desktop.in.in:
+	* nautilus.desktop.in:
+	* nautilus.desktop.in.in:
+	Add X-GNOME-Bugzilla-Version marking to desktop files.
+
+2006-11-06  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c: 
 	Cancel rubberbanding if we get a grab shadow event.
 	This happens when a modal dialog (e.g. an error or auth dialog)
