Translation updated by Ivar Smolin.
2006-11-06  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-11-05 10:14+0200\n"
+"PO-Revision-Date: 2006-11-05 12:04+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -2674,7 +2674,7 @@ msgstr "_Kataloog:"
 
 #: ../src/file-manager/fm-directory-view.c:1340
 msgid "Select Folder to Save Search In"
-msgstr "Otsing salvestamiseks kataloogi valimine"
+msgstr "Otsingu salvestamiseks kataloogi valimine"
 
 #: ../src/file-manager/fm-directory-view.c:2165
 #, c-format
