--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-07  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Update for desktop.in.in change.
+
 2006-11-06  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
