Make the session restart work again (from 2006-11-03 change) Make the
2006-11-07  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-application.c:
	* src/nautilus-shell.c:
	* src/nautilus-main.[ch]:
	Make the session restart work again (from 2006-11-03 change)
	Make the session not restart nautilus on --quit

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-11-07  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-application.c:
+	* src/nautilus-shell.c:
+	* src/nautilus-main.[ch]:
+	Make the session restart work again (from 2006-11-03 change)
+	Make the session not restart nautilus on --quit
+
 2006-11-06  Federico Mena Quintero  <federico@novell.com>
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=330298
