--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.16.2 are:
+* Fix a lot of crashes
+* Handle throbbers with different sizes
+* Don't add a newline when pasting filenames
+* Better a11y relationships betweeen widgets
+* Make nautilus --quit not be restarted by session
+* Fix occasional stuck grabs when rubberband selecting 
+* Don't timeout typeahead when scrolling with mouse wheel
+* Add X-GNOME-Bugzilla-Version to desktop files
+* Fix desktop icon overlap problem
+
 Major changes in 2.16.1 are:
 * Default to search in current directory for non-indexed search
 * Fix clash with symbol names in gtk+
