--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-11-07  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.16.2 ===
+	
+2006-11-07  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
