Translation updated by Ivar Smolin.
2006-11-08  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-08  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 === nautilus 2.16.2 ===
 	
 2006-11-07  Alexander Larsson  <alexl@redhat.com>
