--- a/po/et.po
+++ b/po/et.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-11-05 12:04+0200\n"
+"PO-Revision-Date: 2006-11-08 16:16+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -3998,7 +3998,7 @@ msgstr "K_äivitamine"
 #: ../src/file-manager/fm-properties-window.c:3127
 #: ../src/file-manager/fm-properties-window.c:3139
 msgid "no "
-msgstr ""
+msgstr "keelatud: "
 
 #: ../src/file-manager/fm-properties-window.c:3119
 msgid "list"
