Updated Arabic Translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-10  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation.
+
 2006-11-09  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation, fix #372962.
