Updated Arabic Translation. . QA by Khaled Hosny.

--- a/po/ar.po
+++ b/po/ar.po
@@ -13,13 +13,13 @@ msgstr ""
 "Project-Id-Version: nautilus.HEAD.ar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-09 00:38+0000\n"
-"PO-Revision-Date: 2006-11-09 20:32+0200\n"
+"PO-Revision-Date: 2006-11-16 01:07+0200\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: Plural-Forms: nplurals=4; plural=n==1 ? 0 : n==2 ? 1 : n>=3 && n<=10 ? 2 : 3\n"
 
 #: ../data/browser.xml.h:1
@@ -3962,11 +3962,11 @@ msgstr "كتابة"
 
 #: ../src/file-manager/fm-properties-window.c:3526
 msgid "access"
-msgstr "السماح بالنفاذ"
+msgstr "وصول"
 
 #: ../src/file-manager/fm-properties-window.c:3575
 msgid "Access:"
-msgstr "السماح بالنفاذ:"
+msgstr "وصول:"
 
 #: ../src/file-manager/fm-properties-window.c:3577
 msgid "Folder Access:"
@@ -5159,7 +5159,7 @@ msgstr "غيّر ظهور شريط الحالة لهذه النافذة"
 
 #: ../src/nautilus-navigation-window-menus.c:494
 msgid "_Back"
-msgstr "_وراء"
+msgstr "_خلف"
 
 #: ../src/nautilus-navigation-window-menus.c:496
 msgid "Go to the previous visited location"
@@ -5179,7 +5179,7 @@ msgstr "اذهب إلى الموقع المزار التالي"
 
 #: ../src/nautilus-navigation-window-menus.c:514
 msgid "Forward history"
-msgstr "وراء في التاريخ"
+msgstr "أمام في التاريخ"
 
 #: ../src/nautilus-navigation-window.c:177
 msgid "Toggle between button and text-based location bar"
@@ -5611,9 +5611,8 @@ msgid ""
 "Software Foundation; either version 2 of the License, or (at your option) "
 "any later version."
 msgstr ""
-"ناوتلس هو برنامج حر؛ بامكانك إعادة توزيعه و/أو تعديله تحت شروط الرخصة "
-"العمومية العامة لجنو والتي نشرت عن طريق منظمة البرمجيات الحرة؛ سواء كانت "
-"الإصدارة 2 للرخصة أو أي إصدارة بعدها حسب رغبتك."
+"نوتلس برنامج حر؛ بامكانك إعادة توزيعه و/أو تعديله تحت شروط الرخصة "
+"العمومية العامة لجنو والتي نشرتها منظمة البرمجيات الحرة؛ سواء الإصدارة 2 من الرخصة أو أي إصدارة بعدها حسب رغبتك."
 
 #: ../src/nautilus-window-menus.c:427
 msgid ""
@@ -5622,8 +5621,8 @@ msgid ""
 "FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more "
 "details."
 msgstr ""
-"نوتلس موزّع على أمل أن يكون مفيدًل لمن يستخدمه دون أدنى مسؤولية؛ ولا حتى أي "
-"ضمان يضمن صلاحية العرض في السوق أو توافقه مع أي استخدام محدد. يمكنكم مراجعة "
+"نوتلس موزّع على أمل أن يكون مفيدًا لمن يستخدمه دون أدنى مسؤولية؛ ولا حتى أي "
+"ضمان يضمن صلاحية العرض في السوق أو توافقه مع أي استخدام محدد. يمكنك مراجعة "
 "الرخصة العمومية العامة لجنو لمزيد من التفاصيل."
 
 #: ../src/nautilus-window-menus.c:431
@@ -5632,19 +5631,20 @@ msgid ""
 "Nautilus; if not, write to the Free Software Foundation, Inc., 59 Temple "
 "Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
-"لابد من أن تكونوا قد استلمتم نسخة من رخصة جنو العامة مع نوتلس؛ في حال عدم "
-"استلامكم لذلك، يمكنكم مكاتبة: Free Software Foundation, Inc., 59 Temple "
+"لابد من أن تكون قد استلمت نسخة من رخصة جنو العامة مع نوتلس؛ في حال عدم "
+"استلامك لذلك، يمكنكم مكاتبة: "
+"Free Software Foundation, Inc., 59 Temple "
 "Place, Suite 330, Boston, MA  02111-1307  USA"
 
 #: ../src/nautilus-window-menus.c:450
 msgid ""
 "Nautilus is a graphical shell for GNOME that makes it easy to manage your "
 "files and the rest of your system."
-msgstr "نوتلس هو صدفة رسومية لجنوم تسهل لك إدارة ملفاتك و بقية نظامك."
+msgstr "نوتلس صدفة رسومية لجنوم تسهل لك إدارة ملفاتك و بقية نظامك."
 
 #: ../src/nautilus-window-menus.c:454
 msgid "Copyright © 1999-2006 The Nautilus authors"
-msgstr "حقوق النسخ © 1999-2006 مؤلفي ناوتلس"
+msgstr "حقوق النسخ © 1999-2006 مؤلفي نوتلس"
 
 #. Translators should localize the following string
 #. * which will be displayed at the bottom of the about
