Updated Arabic Translation.  QA'ed by Khaled Hosny

--- a/po/ar.po
+++ b/po/ar.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: nautilus.HEAD.ar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-09 00:38+0000\n"
-"PO-Revision-Date: 2006-11-16 01:07+0200\n"
+"PO-Revision-Date: 2006-11-16 12:14+0200\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
@@ -5621,8 +5621,8 @@ msgid ""
 "FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more "
 "details."
 msgstr ""
-"نوتلس موزّع على أمل أن يكون مفيدًا لمن يستخدمه دون أدنى مسؤولية؛ ولا حتى أي "
-"ضمان يضمن صلاحية العرض في السوق أو توافقه مع أي استخدام محدد. يمكنك مراجعة "
+"يوزّع نوتلس  على أمل أن يكون مفيدًا لمن يستخدمه دون أدنى مسؤولية؛ ولا حتى أي"
+"ضمان يضمن صلاحية العرض في السوق أو توافقه مع أي استخدام محدد. يمكنك مراجعة"
 "الرخصة العمومية العامة لجنو لمزيد من التفاصيل."
 
 #: ../src/nautilus-window-menus.c:431
@@ -5631,8 +5631,8 @@ msgid ""
 "Nautilus; if not, write to the Free Software Foundation, Inc., 59 Temple "
 "Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
-"لابد من أن تكون قد استلمت نسخة من رخصة جنو العامة مع نوتلس؛ في حال عدم "
-"استلامك لذلك، يمكنكم مكاتبة: "
+"من المفترض أن تكون قد استلمت نسخة من رخصة جنو العامة مع نوتلس؛ في حال عدم "
+"استلامك لذلك، يمكنك مكاتبة: "
 "Free Software Foundation, Inc., 59 Temple "
 "Place, Suite 330, Boston, MA  02111-1307  USA"
 
