--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-19  Matic Zgur  <mr.zgur@gmail.com>
+
+	* sl.po: Updated Slovenian translation.
+
 2006-11-18  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation.
