--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-19  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
+
+	* pl.po: Translation updated by wadim dziedzic.
+
 2006-11-19  Matic Zgur  <mr.zgur@gmail.com>
 
 	* sl.po: Updated Slovenian translation.
