Revert federicos patch from 2006-11-06, as it was causing problems.
2006-11-20  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	* src/file-manager/fm-icon-view.c:
	Revert federicos patch from 2006-11-06, as it was causing problems.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-11-20  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	* src/file-manager/fm-icon-view.c:
+	Revert federicos patch from 2006-11-06, as it was causing problems.
+
 2006-11-13  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-async.c:
