Update for release.
2006-11-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-11-20  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS: 
+	Update for release.
+	
+2006-11-20  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	* src/file-manager/fm-icon-view.c:
 	Revert federicos patch from 2006-11-06, as it was causing problems.
