--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 2.16.3 are:
+* Revert a patch that caused icons to move around
+* Fix crash introduced in 2.16.2
+
 Major changes in 2.16.2 are:
 * Fix a lot of crashes
 * Handle throbbers with different sizes
