Post release version bump
2006-11-20  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.16.3 ===

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.16.3 ===
+	
 2006-11-19  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
 
 	* pl.po: Translation updated by wadim dziedzic.
