updated hebrew translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-23  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 === nautilus 2.16.3 ===
 	
 2006-11-19  Wouter Bolsterlee  <wbolster@cvs.gnome.org>
