--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-11-23  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Bump version to 2.17.1
+	Gnome 2.16 work continues on gnome-2-16 branch
+
 2006-11-22  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-search-engine.c:
