A11y fix for handing renames better (#338353)
2006-11-23  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	A11y fix for handing renames better (#338353)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-11-23  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	A11y fix for handing renames better (#338353)
+
+2006-11-23  Alexander Larsson  <alexl@redhat.com>
+
 	* Commit federicos debug logging patch:
 
 2006-10-23  Federico Mena Quintero  <federico@novell.com>
