--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-23  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/nautilus-search-bar.c: (nautilus_search_bar_init):
+	Fix inconsistent label boleding. (#372550)
+
 2006-11-23  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
